# LoomSystem

./: .gitignore  Makefile  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: pyproject.toml
backend/app/: cleanup_service.py  console.py  container_monitor.py  db.py  dependencies.py  docker.py  github.py  implementor_loop.py  implementor_service.py  launch.py  launch_service.py  main.py  polling.py  repositories.py  reviewer_service.py  schemas.py  triage.py  trigger.py
backend/app/migrations/: 001_initial.sql  002_github_polling.sql  003_docker_runtime.sql  004_triage_audit.sql  005_container_monitoring.sql
backend/app/routers/: audit.py  console.py  github.py  implementors.py  notifications.py  projects.py  reviewers.py  settings.py  status.py
backend/tests/: conftest.py  test_audit_notifications.py  test_cleanup_service.py  test_console.py  test_container_monitor.py  test_db.py  test_docker_adapter.py  test_github_adapter.py  test_github_polling.py  test_implementor_loop.py  test_implementor_service.py  test_implementors_api.py  test_launch.py  test_launch_service.py  test_non_goals.py  test_polling.py  test_projects_api.py  test_repositories.py  test_reviewer_service.py  test_settings_api.py  test_startup.py  test_triage.py  test_trigger.py
docs/: requirements-v1.md  v1-acceptance-runbook.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: fixtures.ts  implementor.spec.ts  non-goals.spec.ts  preflight.spec.ts  projects.spec.ts  reviewer.spec.ts  settings.spec.ts  (+1 more)
(+18 files in other folders)
